--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,23 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url("/assets/fonts/montserrat/montserrat-alternates-medium.ttf")
+    format("truetype");
+}
 @import "tailwindcss";
+
+@theme {
+  --font-montserrat: "Montserrat", sans-serif;
+  --animate-fadeIn: fadeIn 0.3s ease-in-out;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+}
 @plugin "daisyui" {
   themes: night --default;
 }
