--- a/src/app/store-front/pages/product-page/product-page.component.html
+++ b/src/app/store-front/pages/product-page/product-page.component.html
@@ -6,8 +6,8 @@
 
 <!-- Producto -->
 @if (productResource.hasValue()) {
-<div class="grid grid-cols-1 sm:grid-cols-2 gap-3 mt-5">
-  <p>Imagenes</p>
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+  <product-carousel [images]="productResource.value().images" />
   <div>
     <h2 class="text-2xl font-bold font-montserrat text-secondary">
       {{ productResource.value().title }}
