--- a/src/app/store-front/pages/gender-page/gender-page.component.html
+++ b/src/app/store-front/pages/gender-page/gender-page.component.html
@@ -14,3 +14,7 @@
   <p>No hay productos</p>
   }
 </div>
+<app-pagination
+  [pages]="productsResource.value()?.pages ?? 0"
+  [currentPage]="paginationService.currentPage()"
+/>
