--- a/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/src/app/products/components/product-carousel/product-carousel.component.html
@@ -4,7 +4,10 @@
     @for (image of images(); track $index) {
 
     <div class="swiper-slide">
-      <img [src]="image | productImage" class="w-full object-cover" />
+      <img
+        [src]="image | productImage"
+        class="w-full object-cover animate-fadeIn"
+      />
     </div>
     }
   </div>
