--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -48,7 +48,7 @@
 
   <button type="submit" class="btn btn-secondary">Login</button>
 
-  <p class="text-slate-700">
+  <p class="text-slate-700 text-center">
     ¿No tienes cuenta?
     <a routerLink="/auth/register" class="text-secondary font-montserrat">
       Crea una aquí</a
