--- a/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
@@ -1,12 +1,29 @@
 <h1 class="text-2xl font-bold">Listado de productos</h1>
 <h3 class="text-lg">
   Total de productos
-  <span class="text-secondary">10</span>
+  <span class="text-secondary font-bold">{{
+    productsResource.value()?.count
+  }}</span>
 </h3>
 
 <div class="divider"></div>
-<app-pagination
-  [pages]="productsResource.value()?.pages ?? 0"
-  [currentPage]="paginationService.currentPage()"
-/>
-<product-table [products]="productsResource.value()!.products" />
+
+<div class="flex gap-2 items-center h-20">
+  <app-pagination
+    [pages]="productsResource.value()?.pages ?? 0"
+    [currentPage]="paginationService.currentPage()"
+  />
+
+  <select
+    class="select select-bordered w-32"
+    [value]="productsPerPage()"
+    (change)="productsPerPage.set(+selectPerpage.value)"
+    #selectPerpage
+  >
+    <option value="10">10</option>
+    <option value="20">20</option>
+    <option value="50">50</option>
+    <option value="100">100</option>
+  </select>
+</div>
+<product-table [products]="productsResource.value()?.products ?? []" />
