--- a/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
@@ -1,4 +1,6 @@
-<h1 class="text-2xl font-bold">{{ product().title }}</h1>
+<h1 class="text-2xl font-bold">
+  {{ productForm.get("title")?.value ?? product().title }}
+</h1>
 <div class="divider"></div>
 
 <form
