--- a/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
@@ -25,5 +25,13 @@
     <option value="50">50</option>
     <option value="100">100</option>
   </select>
+
+  <div class="flex flex-1"></div>
+  <button
+    class="btn btn-outline text-secondary hover:text-white hover:btn-secondary"
+    routerLink="/admin/products/new"
+  >
+    Nuevo Producto
+  </button>
 </div>
 <product-table [products]="productsResource.value()?.products ?? []" />
