--- a/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
@@ -142,7 +142,23 @@
 
     <product-carousel [images]="product().images" />
 
-    <input type="file" class="file-input file-input-bordered w-full mt-4" />
+    <input
+      type="file"
+      multiple
+      accept="image/*"
+      (change)="onFilesChanged($event)"
+      class="file-input file-input-bordered w-full mt-4"
+    />
+
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-2">
+      @for (image of tempImages(); track image) {
+      <img
+        [src]="image"
+        alt="Temporal image"
+        class="w-full h-full object-cover rounded-xl"
+      />
+      }
+    </div>
   </div>
 </form>
 @if(wasSave()){
