--- a/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
@@ -140,7 +140,7 @@
       </button>
     </div>
 
-    <product-carousel [images]="product().images" />
+    <product-carousel [images]="imagesToCarousel()" />
 
     <input
       type="file"
