Fix HTML doctype declaration and improve formatting in index.html; add theme variables and media queries in styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,23 @@
 @plugin "daisyui" {
   themes: night --default;
 }
+
+:root[data-theme="tokyo"] {
+  --background: red;
+  &.dark {
+    --background: blue;
+  }
+}
+
+:root[data-theme="dracula"] {
+  --background: yellow;
+  &.dark {
+    --background: green;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --backgroud: blue;
+  }
+}
